--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+3.1-7  03.04.15  minor fixes
+3.1-6  06.12.12  minor fixes	
 3.1-5  05.29.12  minor fixes 
 3.1-4  07.12.09  minor fixes 
 3.1-3  07.05.09  minor fixes 
